--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 						<p class="social-media">
 							<a href="https://twitter.com/vtfuture" class="tw" title="Twitter" target="_blank">Twitter</a>
 							<a href="https://www.facebook.com/vtfuture" class="fb" title="Facebook" target="_blank">Facebook</a> 
-							<a href="#" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
+							<a href="https://plus.google.com/107920130909274304018" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
 							<a href="https://www.linkedin.com/company/veritech-io" class="lnkd" title="Linkedin" target="_blank">Linkedin</a>
 						</p>
 					</div>
