--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
 	
     <meta charset="utf-8">
-	
+
 	<title>VeriTech - Ideas for the future</title>
 
+	<meta name="robots" content="index, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
     <meta name="keywords" content="Cloud, UX, custom software, consulting, asp.net, c#, responsive, visual studio, github, sql, design, startup, front-end, server">
@@ -39,18 +40,11 @@
 	<link rel="shortcut icon" href="img/favicon-vt.png">
 	<link rel="icon" type="image/png" href="img/favicon-vt.png" />
 	
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Custom Google Web Font -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
-
-    <!-- Add custom CSS here -->
-    <link href="css/landing-page.css" rel="stylesheet">
-	
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
 
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/landing-page.css" rel="stylesheet">
 
 </head>
 
@@ -68,7 +62,6 @@
                 <a class="navbar-brand" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
                     <li><a data-scroll href="#home">Home</a>
@@ -85,9 +78,7 @@
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
 
@@ -246,12 +237,6 @@
 				<p class="carousel-description">
 					Visual Studio, GitHub, TeamCity, ASP.NET MVC, Web API, SignalR, OWIN, Katana, xUnit, HTML5, CSS3, SASS, jQuery, RequireJS, Xamarin, 
 					Apache Cordova, PostgreSQL, SQL Server, Oracle, Redis, MongoDB, Raven and many more...
-
-
-
-
-
-
 				</p>
 			</div>
 		</div>	
@@ -586,12 +571,9 @@
 		</div>
 		
 	</div>
-	
-	
+		
 	</div>
 	
-	
-    <!-- JavaScript -->
     <script src="js/jquery-1.10.2.js"></script>
     <script src="js/bootstrap.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
