schema.org added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta charset="utf-8">
 
 	<title>VeriTech - Ideas for the future</title>
-
-	<meta name="robots" content="index, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
     <meta name="keywords" content="Cloud, UX, custom software, consulting, asp.net, c#, responsive, visual studio, github, sql, design, startup, front-end, server">
@@ -27,15 +25,14 @@
 	<meta property="og:title" content="VeriTech - Ideas for the future" />
 	<meta property="og:url" content="http://veritech.io" />
 	<meta property="og:image" content="http://veritech.io/img/vt-avatar-255x255.png" />
-	
+	<meta property="og:type" content="website" />
+
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 	<link rel="apple-touch-icon" sizes="57x57" href="http://veritech.io/img/apple-touch-icon-57x57.png" />
 	<link rel="apple-touch-icon" sizes="72x72" href="http://veritech.io/img/apple-touch-icon-72x72.png" />
 	<link rel="apple-touch-icon" sizes="114x114" href="http://veritech.io/img/apple-touch-icon-114x114.png" />
 	<link rel="apple-touch-icon" sizes="144x144" href="http://veritech.io/img/apple-touch-icon-144x144.png" />
-
-
 
 	<link rel="shortcut icon" href="img/favicon-vt.png">
 	<link rel="icon" type="image/png" href="img/favicon-vt.png" />
@@ -59,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
+                <a class="navbar-brand" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" alt="VeriTech - Ideas for the future" width="86" height="55"></a>
             </div>
 
             <div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
@@ -93,7 +90,7 @@
 	<div class="site-content">
 	
 	<div class="container" id="wedo">
-		<h3 class="ft-header">What we do</h3>
+		<h3 class="ft-header">What we do at VeriTech</h3>
 		<div class="row">
         	<div class="col-md-4">
         		<div class="feature">
@@ -396,12 +393,16 @@
 		<div class="container">
 			<div class="contact-info">
 				<div class="row">
-					<div class="col-md-3 col-sm-4 contact-column">
-						<h4>VeriTech Solutions</h4>
-						<p>Gheorghe Lupu, No 24, District 4,<br/>
-						Bucharest, Romania</p>
+					<div itemscope itemtype="http://schema.org/Organization" class="col-md-3 col-sm-4 contact-column">
+						<img itemprop="logo" src="http://veritech.io/img/veritech-logo-site@2x.png" style="display:none" />
+						<h4 itemprop="name">VeriTech Solutions S.R.L.</h4>
+						<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+						  <span itemprop="streetAddress">Gheorghe Lupu, No 24</span>,
+						  <span itemprop="addressRegion">District 4</span>,<br />
+						  <span itemprop="addressLocality">Bucharest, Romania</span>
+						</div>
 						<p>
-						<a href="mailto:office@veritech.io">office@veritech.io</a></p>
+						<a itemprop="email" href="mailto:office@veritech.io">office@veritech.io</a></p>
 					</div>
 					<div class="col-md-3 col-sm-4 contact-column right">
 						<h4>Let’s keep in touch</h4>
