bing validation added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
     <meta name="keywords" content="Cloud, UX, custom software, consulting, asp.net, c#, responsive, visual studio, github, sql, design, startup, front-end, server">
 	<meta name="author" content="VeriTech">
- 
+	<meta name="msvalidate.01" content="537E17A91D2451704DFAD97CB1D45525" />
+	
     <title>VeriTech</title>
 	
 	<meta name="twitter:card" content="summary">
