added h1 and alt

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 	<meta name="author" content="VeriTech">
 	<meta name="msvalidate.01" content="537E17A91D2451704DFAD97CB1D45525" />
 	
-    <title>VeriTech</title>
-	
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@vtfuture">
 	<meta name="twitter:creator" content="@vtfuture">
@@ -82,7 +80,7 @@
 
 	<div class="parallax">
 		<div class="parallax-text">
-			<h2>Ideas for the future</h2>
+			<h1>Ideas for the future</h1>
 			<p>We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.</p>
 		</div>
 		<div class="parallax-image"></div>
@@ -246,7 +244,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4 col-sm-6 hidden-xs">
-					<img src="img/infographic.png" />
+					<img src="img/infographic.png" alt="How we work" />
 				</div>
 				<div class="col-md-4 col-sm-6">
 					<div class="info-content">
@@ -422,7 +420,7 @@
 		<div class="copy">
 			<div class="container">
 				<p class="pull-left">2014 © VeriTech Solutions. ALL Rights Reserved. <br /><a href="#" data-toggle="modal" data-target="#myModal">Terms of Service</a></p>
-				<a class="pull-right" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" width="86" height="55"></a>
+				<a class="pull-right" href="http://veritech.io"><img src="img/veritech-logo-site@2x.png" alt="VeriTech" width="86" height="55"></a>
 			</div>
 		</div>
 		
