--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>VeriTech - Ideas for the future</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="We think, design and develop for the user. Using well-thought-out UX and the latest technology, from our first meeting to the final product, we make the impossible possible.">
+    <meta name="description" content="We are an IT startup, with a user-centric approach. We value things done right from the start to the end, with a big attention to details, using the right technology for each client.">
     <meta name="keywords" content="Cloud, UX, custom software, consulting, asp.net, c#, responsive, visual studio, github, sql, design, startup, front-end, server">
 	<meta name="author" content="VeriTech">
 	<meta name="msvalidate.01" content="537E17A91D2451704DFAD97CB1D45525" />
