fix twitter card logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="twitter:creator" content="@vtfuture">
 	<meta name="twitter:title" content="VeriTech">
 	<meta name="twitter:description" content="VeriTech - Ideas for the future">
-	<meta name="twitter:image:src" content="https://g.twimg.com/Twitter_logo_blue.png">
+	<meta name="twitter:image:src" content="http://veritech.io/img/vt-avatar-255x255.png">
 	
 	<meta property="fb:admins" content="306126079558384" />
 	<meta property="og:locale" content="en_US" />
