--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 				<div class="row">
 					<div itemscope itemtype="http://schema.org/Organization" class="col-md-3 col-sm-4 contact-column">
 						<img itemprop="logo" src="http://veritech.io/img/veritech-logo-site@2x.png" style="display:none" />
-						<h4 itemprop="name">VeriTech Solutions S.R.L.</h4>
+						<h4 itemprop="name">VeriTech Solutions SRL</h4>
 						<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 						  <span itemprop="streetAddress">Gheorghe Lupu, No 24</span>,
 						  <span itemprop="addressRegion">District 4</span>,<br />
@@ -409,7 +409,7 @@
 						<p class="social-media">
 							<a href="https://twitter.com/vtfuture" class="tw" title="Twitter" target="_blank">Twitter</a>
 							<a href="https://www.facebook.com/vtfuture" class="fb" title="Facebook" target="_blank">Facebook</a> 
-							<a href="https://plus.google.com/107920130909274304018" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
+							<a href="https://www.google.com/+VeritechIosolutions" rel="publisher" class="gplus" title="Google+" target="_blank">Google+</a>                 
 							<a href="https://www.linkedin.com/company/veritech-io" class="lnkd" title="Linkedin" target="_blank">Linkedin</a>
 						</p>
 					</div>
