--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 				<div class="ft-content" id="js-customSoftware">
 					<h4><i class="fa fa-cogs feature-icon"></i> Custom software</h4>
 					<p>
-						No matter if you're a small or a large company, just starting out or have been in business for decades, we can help you improve your day-to-day operations, customer outreach, or even make possible whole new business models using custom software developed with your business needs in mind.<br /><br />
+						No matter if you're a small or a large company, just starting out or have been in business for decades, we can help you improve your day-to-day operations, customer outreach, or even make possible whole new business models using custom software developed with your needs in mind.<br /><br />
 						Using Agile, we develop in small increments and release a new functioning version of the software more often so that you can get feedback from your employees or your customers before the project is finished, making sure that the final product perfectly matches the needs of its users.<br /><br />
 						Our developers are not only passionate about technology, but about making your business grow. They continually try to understand and learn the problems you are trying to solve for your customers so that they can build a product that solves a need, that becomes an effective tool in solving the problems you are facing, not just something that's part of your employees' routine.<br /><br />
 						Together we can develop a roadmap for the project's development so that your needs are fully met in the least amount of time possible.
@@ -152,7 +152,7 @@
 				<div class="ft-content" id="js-mobileApps">
 					<h4><i class="fa fa-tablet feature-icon"></i> Mobile apps</h4>
 					<p>
-						The number of potential clients that have a mobile device is, without doubt, too large to be ignored and it's only growing. Be it a smartphone or a tablet, you want to be able to reach those customers in a way that offers for them the best possible experience.<br /><br />
+						The number of potential clients that have a mobile device is, without doubt, too large to be ignored and it's only growing. Be it a smartphone or a tablet, you want to be able to reach those customers in a way that offers them the best possible experience.<br /><br />
 						Building a good mobile application is not just about taking your existing application and making it work well / look good in a mobile setting. You can discover whole new business opportunities that emerge from the more social nature of the devices. Anticipate your customer's needs and be the first to provide solutions to his problems, wherever he is.<br /><br />
 						It's not just your customers that can benefit from a mobile application. If software is a part of your business workflow, it can make your employees' jobs easier and more efficient. You can also better track the performance of your staff, resulting in the discovery of potential problems earlier. This way you can remove any inefficiencies they face and they can grow alongside your business.
 					</p>
