--- a/index.html
+++ b/index.html
@@ -574,12 +574,12 @@
 		
 	</div>
 	
-    <script src="js/jquery-1.10.2.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
-	<script src="js/gmaps.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/smooth-scroll.js"></script>
+	<script src="js/gmaps.min.js"></script>
+	<script src="js/smoothscroll.min.js"></script>
+	<script src="js/smooth-scroll.min.js"></script>
 	
 		<script type="text/javascript">
 
