added OOS links

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="projects-item">	
 						<div class="thumbnail">
-							<a href="#" class="thumb-link">
+							<a href="http://requirejsnet.veritech.io" class="thumb-link">
 								<img src="img/img-require.jpg" alt="RequireJS.NET">
 								<span>Find out more &rarr;</span>
 							</a>
@@ -272,15 +272,14 @@
 				<div class="col-sm-6 col-md-4">
 					<div class="projects-item">	
 						<div class="thumbnail">
-							<a href="#" class="thumb-link">
+							<a href="http://bforms.veritech.io" class="thumb-link">
 								<img src="img/img-bforms.jpg" alt="Bforms">
 								<span>Find out more &rarr;</span>
 							</a>
 							
 							<div class="caption">
 								<h4><a href="http://bforms.veritech.io">BForms UI</a></h4>
-								<p>The BForms open source framework consists of a collection of ASP.NET MVC controls, JavaScript AMD modules, custom CSS made with SASS that extends Twitter Bootstrap v3 and makes development of rich user interfaces easy.<p>
-								
+								<p>The BForms open source framework consists of a collection of ASP.NET MVC controls, JavaScript AMD modules, custom CSS made with SASS that extends Twitter Bootstrap v3 and makes development of rich user interfaces easy. There are over thirty responsive UI controls you can chose from.<p>
 							</div>
 						</div>
 					</div>
