--- a/index.html
+++ b/index.html
@@ -632,6 +632,7 @@
 	<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 	<script src="js/gmaps.min.js"></script>
 	<script src="js/smoothscroll.min.js"></script>
+	<script src="js/bind-polyfill.min.js"></script>
 	<script src="js/smooth-scroll.min.js"></script>
 	
 		<script type="text/javascript">
@@ -682,7 +683,7 @@
 			  smoothScroll.init();		
 			  
 			  //Menu
-			  jQuery('.navbar-nav a').on('click',function(e){
+			  jQuery('.navbar-nav > a').on('click',function(e){
 				var $toggleBtn = jQuery('.navbar-toggle[data-target=".navbar-ex1-collapse"]');
 			  
 				if($toggleBtn.is(':visible')){
