update contact address format

--- a/index.html
+++ b/index.html
@@ -451,9 +451,9 @@
 						<img itemprop="logo" src="http://veritech.io/img/veritech-logo-site@2x.png" style="display:none" />
 						<h4 itemprop="name">VeriTech Solutions SRL</h4>
 						<div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-						  <span itemprop="streetAddress">Gheorghe Lupu, No 24</span>,
+						  <span itemprop="streetAddress">G-ral Gheorghe Lupu 24</span>,<br />
 						  <span itemprop="addressRegion">District 4</span>,<br />
-						  <span itemprop="addressLocality">Bucharest, Romania</span>
+						  <span itemprop="addressLocality">040592 Bucharest</span>
 						</div>
 						<p>
 						<a itemprop="email" href="mailto:office@veritech.io">office@veritech.io</a></p>
@@ -675,8 +675,8 @@
 			  map.setStyle("map_style");
 
 			  map.addMarker({
-				lat: 44.4100575,
-				lng: 26.101783,
+				lat: 44.4097073,
+				lng: 26.1007000,
 				icon: "img/marker.png"
 			  });
 			  
