--- a/index.html
+++ b/index.html
@@ -339,9 +339,9 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<p class="pull-left">
 						<img class="media-object" alt="CTO" src="img/team-cto.png" style="width: 110px; height: 110px;">
-					</a>
+					</p>
 					<div class="media-body">
 						<h4 class="media-heading">CEO</h4>
 						He leads and motivates the team to reach their goal and full potential.
@@ -350,9 +350,9 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<p class="pull-left">
 						<img class="media-object" alt="CTO" src="img/team-ux.png" style="width: 110px; height: 110px;">
-					</a>
+					</p>
 					<div class="media-body">
 						<h4 class="media-heading">UX/UI Designer</h4>
 						She focuses on what the client wants while listening to the users.  
@@ -363,9 +363,9 @@
 		<div class="row">
 			<div class="col-md-4 col-sm-6">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<p class="pull-left"p>
 						<img class="media-object" alt="CTO" src="img/team-frontend.png" style="width: 110px; height: 110px;">
-					</a>
+					</p>
 					<div class="media-body">
 						<h4 class="media-heading">Front-End Developer</h4>
 						Handles client-side development. Makes sure the app will look and act the same on any platform. 
@@ -374,9 +374,9 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<p class="pull-left"p>
 						<img class="media-object" alt="CTO" src="img/team-backend.png" style="width: 110px; height: 110px;">
-					</a>
+					</p>
 					<div class="media-body">
 						<h4 class="media-heading">DevOps/Back-End Developer</h4>
 						Build, testing and deployment automation. Handles back-end services and database development.
@@ -385,9 +385,9 @@
 			</div>
 			<div class="col-md-4 col-sm-6">
 				<div class="media">
-					<a class="pull-left" href="#">
+					<p class="pull-left" p>
 						<img class="media-object" alt="CTO" src="img/team-tester.png" style="width: 110px; height: 110px;">
-					</a>
+					</p>
 					<div class="media-body">
 						<h4 class="media-heading">QA Engineer</h4>
 						He test everything we do, assuring that what we build meets the quality standards. 
