--- a/iisstart.htm
+++ b/iisstart.htm
@@ -8,8 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="robots" content="noindex, nofollow">
-    <meta name="description" content="Veritech">
-    <meta name="author" content="VeriTech">
+    <meta name="description" content="VeriTech private cloud">
+    <meta name="author" content="VeriTech Solutions">
 
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 
@@ -17,6 +17,6 @@
 </head>
 <body style="background: #322956; text-align: center; padding: 30px 5px;">
 
-    <a href="http://veritech.io"><img src="private-cloud.jpg" width="960" style="max-width: 100%;" alt="Veritech private cloud" /></a>
+    <a href="http://veritech.io"><img src="private-cloud.jpg" width="900" style="max-width: 100%;" alt="VeriTech private cloud" /></a>
 </body>
 </html>
