update applications type

--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
         	<div class="col-md-7 col-sm-6">
 				<h4>Applications types</h4>
 				<ul class="custom-list">
+					<li>Enterprise Social Network</li>
 					<li>Responsive web applications</li>
 					<li>RESTful web services</li>
 					<li>Cross-platform web mobile applications</li>
 					<li>Native mobile applications </li>
 					<li>Content management systems</li>
-					<li>Document management systems</li>
-					<li>Customer relationship management systems</li>
+					<li>Document management systems</li>					
 					<li>Public and private cloud integration and management</li>
 
 
