--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		<div class="projects single-project" id="esn">		
 			<div class="single-project-item">
 				<h2>Veritech ESN</h2>
-				<h4>Experience team work at its' full potential </h4>
+				<h4>Experience team work at its full potential </h4>
 				<p><strong>Veritech ESN</strong> is a light and easy to use <strong>Enterprise Social Network</strong>, designed to work on any device, suitable for any kind of team and, more importantly, to yours.</p>
 				<p class="call-to-action"><a href="http://veritechesn.com/" class="btn btn-info" title="Veritech ESN">Check it out!</a></p>
 			</div>
